fixed overflow

--- a/src/styles/components/Sidebar.scss
+++ b/src/styles/components/Sidebar.scss
@@ -11,7 +11,7 @@
   overflow-y: auto;
   margin-bottom: 10px;
   margin-left: 5px;
-  margin-right: 10px;
+  margin-right: 8px;
 }
 .sidebar-wrapper {
   padding: 10px 10px 0 10px;
